# seedbed

./: .gitignore  .lefthook.yml  .mise.toml  .windsurfrules  Cargo.toml  LICENSE  package.json
.config/: .clippy.toml  .cspell.json  .markdownlint-cli2.jsonc  .rustfmt.toml  tasks.md.toml  tasks.rs.toml  tasks.ts.toml
.github/: .gitignore  renovate.config.js  renovate.json
.github/workflows/: renovate.yaml  rust-lint.yml  scorecard.yaml
crates/lib/core/: Cargo.toml
crates/lib/core/src/: lib.rs
docs/contributors/: vision.md
docs/contributors/templates/: decision-status-shields.md
