[package]
name = "libseedbed-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.97"
spin = "0.10.0"
thiserror = "2.0.12"

[lints]
workspace = true
